[gd_scene load_steps=5 format=3 uid="uid://qq15dgyc72ta"]

[ext_resource type="Texture2D" uid="uid://qcyp21s52d5" path="res://icon.svg" id="1_6vikr"]
[ext_resource type="Script" path="res://character_scripts/bat.gd" id="1_lp1dh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vjhq5"]
size = Vector2(128, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8bfjk"]
size = Vector2(128, 56)

[node name="Bat" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 24
script = ExtResource("1_lp1dh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -3.8147e-06)
scale = Vector2(1, 0.4375)
texture = ExtResource("1_6vikr")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vjhq5")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_8bfjk")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
